--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio profissional de Junior Silva - Desenvolvedor Backend e Segurança com foco em Java e Arquitetura de Sistemas.">
-    <title>Junior Silva | Senior Backend & Security Developer</title>
+    <title>CINCO | Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@500;700&display=swap" rel="stylesheet">
@@ -17,8 +17,8 @@
 <header>
     <nav class="navbar">
         <div class="nav-brand">
-            <h1 class="logo">JS</h1>
-            <span class="brand-text">Junior Silva</span>
+            <h1 class="logo">CO</h1>
+            <span class="brand-text">CINCO</span>
         </div>
 
         <div class="menu-toggle" id="menu-toggle">
@@ -42,7 +42,7 @@
     </div>
     
     <div class="hero-content">
-        <div class="hero-badge">🎓 Estudante de AD&S | Foco em Segurança</div>
+        <div class="hero-badge">🎓 Estudante de ADS | Foco em Segurança</div>
         <h1>Construindo aplicações robustas, escaláveis e seguras</h1>
         <p class="hero-subtitle">
             Transformo ideias complexas em arquitetura sólida com Java, JavaScript e práticas de segurança de nível enterprise
@@ -339,7 +339,7 @@
 <footer>
     <div class="footer-content">
         <div class="footer-section">
-            <h4>Junior Silva</h4>
+            <h4>CINCO</h4>
             <p>Developer | Security Specialist | Architect</p>
         </div>
         <div class="footer-section">
